--- a/db_test.ipynb
+++ b/db_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "1d0d83e5",
    "metadata": {},
    "outputs": [],
@@ -107,8 +107,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "895064f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tools.database import DatabaseManager, DatabaseConnector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "95386aa4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DBM = DatabaseManager()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4a1953bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sale_ai_data',\n",
+       " 'sale_co_chatgroup_wechat',\n",
+       " 'sale_co_inform',\n",
+       " 'sale_co_inform_wechat',\n",
+       " 'sale_co_interventiont',\n",
+       " 'sale_collaborate',\n",
+       " 'sale_file',\n",
+       " 'sale_forbidden',\n",
+       " 'sale_knowledge',\n",
+       " 'sale_plat_device',\n",
+       " 'sale_plat_role',\n",
+       " 'sale_plat_tenant',\n",
+       " 'sale_plat_user',\n",
+       " 'sale_plat_user_role',\n",
+       " 'sale_process',\n",
+       " 'sale_product',\n",
+       " 'sale_product_file',\n",
+       " 'sale_role',\n",
+       " 'sale_strategy',\n",
+       " 'sale_strategy_file',\n",
+       " 'sale_strategy_userlog',\n",
+       " 'sale_task',\n",
+       " 'sale_task_data',\n",
+       " 'sale_task_knowledge',\n",
+       " 'sale_task_product',\n",
+       " 'sale_task_wechat',\n",
+       " 'sale_user',\n",
+       " 'sale_user_role',\n",
+       " 'sale_wechat_account',\n",
+       " 'sale_wechat_contact',\n",
+       " 'sale_wechat_group_stranger',\n",
+       " 'sale_wechat_message',\n",
+       " 'sale_wechat_stranger']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DBM.get_table_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abfe21df",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -130,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
