--- a/db_test.ipynb
+++ b/db_test.ipynb
@@ -178,6 +178,46 @@
    "execution_count": null,
    "id": "fe71e411",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'false' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 20\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mopenai\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m OpenAI\n\u001b[32m      6\u001b[39m client = OpenAI(\n\u001b[32m      7\u001b[39m     base_url=\u001b[33m'\u001b[39m\u001b[33mhttps://qianfan.baidubce.com/v2\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      8\u001b[39m     api_key=\u001b[33m'\u001b[39m\u001b[33mbce-v3/ALTAK-wKuFEIj8EXZqIDOquAnsT/678c3407baba1a9b64ab889a7f7becd7dc3a4591\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m      9\u001b[39m )\n\u001b[32m     10\u001b[39m response = client.chat.completions.create(\n\u001b[32m     11\u001b[39m     model=\u001b[33m\"\u001b[39m\u001b[33mernie-4.5-turbo-128k\u001b[39m\u001b[33m\"\u001b[39m, \n\u001b[32m     12\u001b[39m     messages=[\n\u001b[32m     13\u001b[39m     {\n\u001b[32m     14\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mrole\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33muser\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     15\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mcontent\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33m您好\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     16\u001b[39m     }\n\u001b[32m     17\u001b[39m ],\n\u001b[32m     18\u001b[39m     extra_body={ \n\u001b[32m     19\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mweb_search\u001b[39m\u001b[33m\"\u001b[39m:{\n\u001b[32m---> \u001b[39m\u001b[32m20\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33menable\u001b[39m\u001b[33m\"\u001b[39m: \u001b[43mfalse\u001b[49m,\n\u001b[32m     21\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33menable_citation\u001b[39m\u001b[33m\"\u001b[39m: false,\n\u001b[32m     22\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33menable_trace\u001b[39m\u001b[33m\"\u001b[39m: false\n\u001b[32m     23\u001b[39m }, \n\u001b[32m     24\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mplugin_options\u001b[39m\u001b[33m\"\u001b[39m:{}\n\u001b[32m     25\u001b[39m     }\n\u001b[32m     26\u001b[39m )\n\u001b[32m     27\u001b[39m \u001b[38;5;28mprint\u001b[39m(response)\n",
+      "\u001b[31mNameError\u001b[39m: name 'false' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# 请安装 OpenAI SDK : pip install openai\n",
+    "# apiKey 获取地址： https://console.bce.baidu.com/iam/#/iam/apikey/list\n",
+    "# 支持的模型列表： https://cloud.baidu.com/doc/WENXINWORKSHOP/s/Fm2vrveyu\n",
+    "\n",
+    "from openai import OpenAI\n",
+    "client = OpenAI(\n",
+    "    base_url='https://qianfan.baidubce.com/v2',\n",
+    "    api_key='bce-v3/ALTAK-wKuFEIj8EXZqIDOquAnsT/678c3407baba1a9b64ab889a7f7becd7dc3a4591'\n",
+    ")\n",
+    "response = client.chat.completions.create(\n",
+    "    model=\"ernie-4.5-turbo-128k\", \n",
+    "    messages=[\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": \"您好\"\n",
+    "    }\n",
+    "]\n",
+    ")\n",
+    "print(response)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2da378f",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
