--- a/db_test.ipynb
+++ b/db_test.ipynb
@@ -215,8 +215,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d2da378f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-07-08 17:28:40 - google_adk.google.adk.models.registry - INFO - _register:64 - Updating LLM class for gemini-.* from <class 'google.adk.models.google_llm.Gemini'> to <class 'google.adk.models.google_llm.Gemini'>\n",
+      "2025-07-08 17:28:40 - google_adk.google.adk.models.registry - INFO - _register:64 - Updating LLM class for projects\\/.+\\/locations\\/.+\\/endpoints\\/.+ from <class 'google.adk.models.google_llm.Gemini'> to <class 'google.adk.models.google_llm.Gemini'>\n",
+      "2025-07-08 17:28:40 - google_adk.google.adk.models.registry - INFO - _register:64 - Updating LLM class for projects\\/.+\\/locations\\/.+\\/publishers\\/google\\/models\\/gemini.+ from <class 'google.adk.models.google_llm.Gemini'> to <class 'google.adk.models.google_llm.Gemini'>\n",
+      "2025-07-08 17:28:40 - google_adk.google.adk.models.registry - INFO - _register:64 - Updating LLM class for gemini-.* from <class 'google.adk.models.google_llm.Gemini'> to <class 'google.adk.models.google_llm.Gemini'>\n",
+      "2025-07-08 17:28:40 - google_adk.google.adk.models.registry - INFO - _register:64 - Updating LLM class for projects\\/.+\\/locations\\/.+\\/endpoints\\/.+ from <class 'google.adk.models.google_llm.Gemini'> to <class 'google.adk.models.google_llm.Gemini'>\n",
+      "2025-07-08 17:28:40 - google_adk.google.adk.models.registry - INFO - _register:64 - Updating LLM class for projects\\/.+\\/locations\\/.+\\/publishers\\/google\\/models\\/gemini.+ from <class 'google.adk.models.google_llm.Gemini'> to <class 'google.adk.models.google_llm.Gemini'>\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from prompts.prompts import select_ai_data\n",
+    "\n",
+    "ai_data = select_ai_data(1, 43)\n",
+    "print(ai_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c0ca995",
    "metadata": {},
    "outputs": [],
    "source": []
